feat: Complete enterprise-grade manual ingestion with RBAC/IAM and installation control
🚀 Major Features Added:
- Manual ingestion workflow with complete UI-bypass capabilities
- Enterprise-grade RBAC and IAM integration with security validation
- Hot deployment system for zero-downtime installation
- Comprehensive installation control checklist system

🔐 Security & Compliance:
- Advanced RBAC configuration with dynamic role validation
- IAM role integration with cross-account access support
- PII detection and automatic data classification
- Compliance framework support (GDPR, SOX, HIPAA)
- Comprehensive audit logging and security testing

📋 Documentation & Installation:
- Created INSTALLATION.md with comprehensive setup guide
- Added INSTALLATION_CHECKLIST.md for step-by-step verification
- Enhanced README.md with manual ingestion sections
- Created MANUAL_INGESTION.md with enterprise workflow guide
- Added SECURITY_CHECKLIST.md for production validation

🧪 Testing & Validation:
- test-s3-connection.sh for basic connectivity validation
- test-rbac-security.sh for advanced security testing
- run-manual-ingestion.sh for automated workflow execution
- Enhanced health-check.sh for deployment verification

⚙️ Configuration Templates:
- manual-s3-ingestion.yaml for basic manual ingestion
- prod-s3-ingestion-rbac.yaml for production RBAC setup
- .env.example template for secure credential management
- Enhanced configuration documentation

🐳 Hot Deployment:
- Zero-downtime installation to existing OpenMetadata containers
- Automated package deployment and verification
- Container health monitoring and validation
- Production-ready deployment scripts

🔧 Code Improvements:
- Updated setup.py with proper version pinning (v0.9, OpenMetadata 1.8.1)
- Implemented ParserFactory with OrcParser support
- Enhanced S3SecurityManager with RBAC integration
- Fixed all import issues and package integration

📊 Production Ready:
- Version 0.9 connector with full OpenMetadata 1.8.1 compat

--- a/scripts/install.txt
+++ b/scripts/install.txt
@@ -1,6 +1,34 @@
+# OpenMetadata S3/MinIO Connector Installation Commands
+
+## Basic Installation
 pip install --upgrade pip setuptools
-pip install "openmetadata-ingestion==xxx"
-pip install google-cloud-bigquery
+pip install "openmetadata-ingestion==1.8.1"
+pip install -e .
+
+## Additional Dependencies for Advanced Features
 pip install pandas
 pip install importlib-metadata
-pip install -e .
+pip install google-cloud-bigquery  # For BigQuery integration if needed
+
+## Manual Ingestion Dependencies
+pip install pyyaml>=6.0
+pip install boto3>=1.26.0
+pip install requests>=2.28.0
+
+## Security and RBAC Dependencies
+pip install cryptography>=3.4.8
+pip install pyjwt>=2.4.0
+
+## Hot Deployment
+# No additional dependencies - uses existing OpenMetadata container
+
+## Verification Commands
+# Test basic installation
+python -c "import connectors.s3.s3_connector; print('S3 Connector imported successfully')"
+
+# Test manual ingestion scripts
+./scripts/test-s3-connection.sh --dry-run
+./scripts/test-rbac-security.sh --dry-run
+
+# Test hot deployment
+./deployment/docker-hotdeploy/health-check.sh
